# human_human_robot_wizard_of_oz

./: README.md
Azure_Kinect_ROS_Driver/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
Azure_Kinect_ROS_Driver/install/azure_kinect_ros_driver/lib/azure_kinect_ros_driver/: node
Azure_Kinect_ROS_Driver/install/azure_kinect_ros_driver/share/ament_index/resource_index/parent_prefix_path/: azure_kinect_ros_driver
Azure_Kinect_ROS_Driver/install/azure_kinect_ros_driver/share/azure_kinect_ros_driver/: package.sh
Azure_Kinect_ROS_Driver/log/: latest_build
Azure_Kinect_ROS_Driver/src/: k4a_ros_device.cpp
acquisition_block/: CMakeLists.txt  package.xml
acquisition_block/launch/: start_recording.launch.py
acquisition_block/src/: store_datapoint.cpp
acquisition_block/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
acquisition_block/src/log/: latest_build
control_block/: CMakeLists.txt  package.xml
control_block/launch/: user_study.launch.py
control_block/src/: produce_sound.cpp  test_transitions.cpp
interface_msgs/: CMakeLists.txt  package.xml
interface_msgs/msg/: RawDatapoint.msg  TimeWindowOffline.msg  TimeWindowOnline.msg
