<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>acquisition_block</name>
  <version>0.0.0</version>
  <description>Package for the processing of the 3D skeletons poses acquired from the Azure Kinect camera</description>
  <maintainer email="francesco.semeraro@manchester.ac.uk">francesco</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>interface_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
