<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>control_block</name>
  <version>1.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="francesco.semeraro@manchester.ac.uk">francesco</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>interface_msgs</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>